# sith-language-server

./: .gitignore  Cargo.toml  package-lock.json
crates/python_ast/: Cargo.toml
crates/python_ast/src/: call_path.rs  helpers.rs  lib.rs  name.rs  node.rs  nodes.rs  statement_visitor.rs  visitor.rs
crates/python_ast/src/visitor/: preorder.rs  transformer.rs
crates/python_parser/: Cargo.toml
crates/python_parser/src/: helpers.rs  lexer.rs  lib.rs  string.rs  token.rs
crates/python_parser/src/lexer/: fstring.rs
crates/python_parser/src/parser/: expression.rs  helpers.rs  mod.rs  pattern.rs  recovery.rs  statement.rs  tests.rs
crates/python_parser/src/parser/snapshots/: python_parser__parser__tests__expr_mode_valid_syntax.snap  python_parser__parser__tests__ipython_escape_commands.snap  (+1 more)
crates/python_parser/src/snapshots/: python_parser__lexer__tests__assignment.snap  python_parser__lexer__tests__bom.snap  python_parser__lexer__tests__bom_with_offset.snap  python_parser__lexer__tests__bom_with_offset_edge.snap  python_parser__lexer__tests__comment_until_mac_eol.snap  python_parser__lexer__tests__comment_until_unix_eol.snap  python_parser__lexer__tests__comment_until_windows_eol.snap  python_parser__lexer__tests__dedent_after_whitespace.snap  python_parser__lexer__tests__double_dedent_with_mac_eol.snap  python_parser__lexer__tests__double_dedent_with_tabs_mac_eol.snap  python_parser__lexer__tests__double_dedent_with_tabs_unix_eol.snap  python_parser__lexer__tests__double_dedent_with_tabs_windows_eol.snap  python_parser__lexer__tests__double_dedent_with_unix_eol.snap  python_parser__lexer__tests__double_dedent_with_windows_eol.snap  python_parser__lexer__tests__emoji_identifier.snap  python_parser__lexer__tests__empty_fstrings.snap  python_parser__lexer__tests__empty_ipython_escape_command.snap  python_parser__lexer__tests__escape_unicode_name.snap  python_parser__lexer__tests__fstring.snap  python_parser__lexer__tests__fstring_comments.snap  python_parser__lexer__tests__fstring_conversion.snap  python_parser__lexer__tests__fstring_escape.snap  python_parser__lexer__tests__fstring_escape_braces.snap  python_parser__lexer__tests__fstring_escape_raw.snap  python_parser__lexer__tests__fstring_expression_multiline.snap  python_parser__lexer__tests__fstring_multiline.snap  python_parser__lexer__tests__fstring_named_unicode.snap  python_parser__lexer__tests__fstring_named_unicode_raw.snap  python_parser__lexer__tests__fstring_nested.snap  python_parser__lexer__tests__fstring_parentheses.snap  python_parser__lexer__tests__fstring_prefix.snap  python_parser__lexer__tests__fstring_single_quote_escape_mac_eol.snap  python_parser__lexer__tests__fstring_single_quote_escape_unix_eol.snap  python_parser__lexer__tests__fstring_single_quote_escape_windows_eol.snap  python_parser__lexer__tests__fstring_with_format_spec.snap  python_parser__lexer__tests__fstring_with_ipy_escape_command.snap  python_parser__lexer__tests__fstring_with_lambda_expression.snap  python_parser__lexer__tests__fstring_with_multiline_format_spec.snap  python_parser__lexer__tests__fstring_with_named_expression.snap  python_parser__lexer__tests__fstring_with_nul_char.snap  (+87 more)
crates/python_parser/tests/: fixtures.rs  generate_inline_tests.rs
crates/python_parser/tests/snapshots/: invalid_syntax@ann_assign_stmt_invalid_annotation.py.snap  invalid_syntax@ann_assign_stmt_invalid_target.py.snap  invalid_syntax@ann_assign_stmt_invalid_value.py.snap  invalid_syntax@ann_assign_stmt_missing_rhs.py.snap  invalid_syntax@ann_assign_stmt_type_alias_annotation.py.snap  invalid_syntax@assert_empty_msg.py.snap  invalid_syntax@assert_empty_test.py.snap  invalid_syntax@assert_invalid_msg_expr.py.snap  invalid_syntax@assert_invalid_test_expr.py.snap  invalid_syntax@assign_stmt_invalid_target.py.snap  invalid_syntax@assign_stmt_invalid_value_expr.py.snap  invalid_syntax@assign_stmt_keyword_target.py.snap  invalid_syntax@assign_stmt_missing_rhs.py.snap  invalid_syntax@async_unexpected_token.py.snap  invalid_syntax@aug_assign_stmt_invalid_target.py.snap  invalid_syntax@aug_assign_stmt_invalid_value.py.snap  invalid_syntax@aug_assign_stmt_missing_rhs.py.snap  invalid_syntax@case_expect_indented_block.py.snap  invalid_syntax@class_def_empty_body.py.snap  invalid_syntax@class_def_missing_name.py.snap  invalid_syntax@class_def_unclosed_type_param_list.py.snap  invalid_syntax@clause_expect_indented_block.py.snap  invalid_syntax@clause_expect_single_statement.py.snap  invalid_syntax@comma_separated_missing_comma.py.snap  invalid_syntax@comma_separated_missing_comma_between_elements.py.snap  invalid_syntax@comma_separated_missing_element_between_commas.py.snap  invalid_syntax@comma_separated_missing_first_element.py.snap  invalid_syntax@comprehension_missing_for_after_async.py.snap  invalid_syntax@decorator_invalid_expression.py.snap  invalid_syntax@decorator_missing_expression.py.snap  invalid_syntax@decorator_missing_newline.py.snap  invalid_syntax@decorator_unexpected_token.py.snap  invalid_syntax@del_incomplete_target.py.snap  invalid_syntax@del_stmt_empty.py.snap  invalid_syntax@dotted_name_multiple_dots.py.snap  invalid_syntax@except_stmt_invalid_expression.py.snap  invalid_syntax@except_stmt_missing_as_name.py.snap  invalid_syntax@except_stmt_missing_exception.py.snap  invalid_syntax@except_stmt_missing_exception_and_as_name.py.snap  invalid_syntax@except_stmt_unparenthesized_tuple.py.snap  (+340 more)
crates/ruff_python_resolver/: Cargo.toml
crates/ruff_python_resolver/src/: config.rs  execution_environment.rs  host.rs  implicit_imports.rs  import_result.rs  lib.rs  module_descriptor.rs  py_typed.rs  python_platform.rs  python_version.rs
crates/ruff_source_file/: Cargo.toml
crates/sith_server/: Cargo.toml
crates/sith_server/src/: edit.rs  lib.rs  server.rs  session.rs
crates/sith_server/src/edit/: convert.rs  document.rs  replacement.rs
crates/sith_server/src/server/: api.rs  client.rs  schedule.rs
crates/sith_server/tests/: document.rs
crates/sith_server/tests/snapshots/: document__delete_lines_pandas_html.snap
src/: error.rs  lib.rs  (+2 more)
(+346 files in other folders)
