[package]
name = "python-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/ruff_text_size"]

[dependencies]
bitflags = "1.3.2"
encoding_rs = "0.8.32"
static_assertions = "1.1.0"
ruff_text_size = { path = "crates/ruff_text_size", package = "ruff_text_size" }
unicode-ident = "1.0.11"
itertools = "0.11.0"

[dev-dependencies]
insta = { version = "1.31.0", features = ["yaml"] }
pretty_assertions = "1.3.0"

[profile.release]
strip = true
lto = true
codegen-units = 1

[profile.profiling]
inherits = "release"
strip = false
debug = true

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
