[package]
name = "python-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/ruff_text_size", "crates/ruff_source_file", "crates/ruff_macros", "crates/ruff_index",
"crates/python_ast", "crates/python_parser", "crates/ruff_benchmark"]

[dependencies]
bitflags = "1.3.2"
encoding_rs = "0.8.32"
static_assertions = "1.1.0"
ruff_text_size = { path = "crates/ruff_text_size", package = "ruff_text_size" }
ruff_index = { path = "crates/ruff_index", package = "ruff_index" }
ruff_source_file = { path = "crates/ruff_source_file", package = "ruff_source_file" }
python_ast = { path = "crates/python_ast", package = "python_ast" }
python_parser = { path = "crates/python_parser", package = "python_parser" }
unicode-ident = "1.0.11"
itertools = "0.11.0"
tokio = { version = "1.32.0", features = ["full"] }
tower-lsp = { version = "0.20.0", features = ["proposed"] }
ropey = "1.6.0"
dashmap = "5.5.3"
ouroboros = "0.18.0"
memchr = "2.6.4"
smallvec = "1.11.2"

[dev-dependencies]
insta = { version = "1.31.0", features = ["yaml"] }
pretty_assertions = "1.3.0"

[profile.release]
strip = true
lto = true
codegen-units = 1

[profile.profiling]
inherits = "release"
strip = false
debug = true

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
