[package]
name = "python_ast"
version = "0.0.0"
publish = false
edition = "2021"

[lib]

[dependencies]
ruff_source_file = { path = "../ruff_source_file" }
ruff_text_size = { path = "../ruff_text_size" }

bitflags = { workspace = true }
is-macro = { workspace = true }
itertools = { workspace = true }
smallvec = { workspace = true }
static_assertions = { workspace = true }
compact_str = { workspace = true }
