[package]
name = "python_parser"
version = "0.0.0"
publish = false
authors = ["Charlie Marsh <charlie.r.marsh@gmail.com>", "LaBatata101 <labatata101@gmail.com>"]
edition = "2021"

[lib]

[dependencies]
python_ast = { workspace = true }
ruff_text_size = { workspace = true }
ruff_source_file = { workspace = true }

bitflags = { workspace = true }
is-macro = { workspace = true }
itertools = { workspace = true }
memchr = { workspace = true }
unicode-ident = { workspace = true }
unicode_names2 = { workspace = true }
unicode-normalization = { workspace = true }
rustc-hash = { workspace = true }
static_assertions = { workspace = true }
bstr = { workspace = true }
compact_str = { workspace = true }

[dev-dependencies]
walkdir = { workspace = true }
anyhow = { workspace = true }
insta = { version = "1.35.1", features = ["glob"] }
annotate-snippets = { version = "0.9.2", features = ["color"] }
