[package]
name = "ruff_python_resolver"
version = "0.0.0"
description = "A Python module resolver for Ruff"
publish = false
edition = "2021"

[lib]
doctest = false

[dependencies]
log = { workspace = true }

[dev-dependencies]
env_logger = { version = "0.11.0" }
tempfile = { version = "3.9.0" }
insta = { version = "1.31.0", features = ["yaml"] }
