[package]
name = "ruff_source_file"
version = "0.0.0"
publish = false
edition = "2021"

[lib]

[dependencies]
memchr = "2.6.4"
once_cell = "1.18.0"
ruff_text_size = { path = "../ruff_text_size" }
serde = { version = "1.0.190", optional = true }

[dev-dependencies]
insta = { version = "1.31.0", features = ["yaml"] }


[features]
serde = ["dep:serde", "ruff_text_size/serde"]
